
Adjust log levels so some errors show up with default verbosity.

Fixed bug where an extra comma caused a traceback during a warning
about unnecessary sig files.  Plus fixed print so the real filename
would show up and not a Python object representation.

bug #25787: Usernames with escaped @-sign are not handled properly
https://savannah.nongnu.org/bugs/?25787


New in v0.5.12 (2009/03/15)
---------------------------
bug #25838: Backup fails / ncftp - remote file already exists
https://savannah.nongnu.org/bugs/?25838
With this fix we also get resume in ftp get/put.  If a put or
get fails part of the way through, ncftp will resume on the
next retry.

bug #25853: duplicity fails with boto passwords coming from ~/.boto
https://savannah.nongnu.org/bugs/?25853

patch #6773: Make user name optional in rsync backend
https://savannah.nongnu.org/patch/?6773

GPG errors will no longer cause tracebacks, but will produce a
log entry, from gpg, similar to the following:
===== Begin GnuPG log =====
gpg: BAD0BAD0: skipped: public key not found
gpg: [stdin]: encryption failed: public key not found
===== End GnuPG log =====
This will let the user know what really caused the GPG process
to fail, and what really caused errors like 'broken pipe'.

Add Epydoc output to web site and start adding documentation.
http://duplicity.nongnu.org/epydoc/index.html


New in v0.5.11 (2009/03/08)
---------------------------
bug #25787: Usernames with @-sign are not handled properly
https://savannah.nongnu.org/bugs/?25787

Bug #333057: GnuPGInterface prints exit statuses incorrectly
https://bugs.launchpad.net/bugs/333057

bug #25696: ncftp error w/0.5.09 -- nested target directories
https://savannah.nongnu.org/bugs/?25696

bug #15664: When restoring backup: "OverflowError:
            long int too large to convert to int"
https://savannah.nongnu.org/bugs/?15664

patch #6761: More robust pexpect handling of SSH authentication
https://savannah.nongnu.org/patch/?6761
